<resources>

    <string name="app_name">MovYeah</string>
    <string name="loading">იტვირთება…</string>
    <string name="loading_net_fail">საჭიროა ინტერნეტთან კავშირი, თუმცა შენი გადმოწერილი ფილმები შეგიძლია ნახო აქვე ინტერნეტის გარეშე</string>
    <string name="loading_news_fail">ფილმები ვერ მოიძებნა</string>
    <string name="loading_favs_fail">ფავორიტები ვერ მოიძებნა</string>
    <string name="loading_dows_fail">გადმოწერები ვერ მოიძებნა</string>
    <string name="scroll_up">ზემოთ ასვლა</string>
    <string name="search">ძებნა</string>
    <string name="back">უკან</string>
    <string name="done">დასრულება</string>
    <string name="search_text">შეიყვანეთ საძიებო სიტყვა</string>
    <string name="yes">კი</string>
    <string name="no">არა</string>
    <string name="cancel">გაუქმება</string>
    <string name="download_start">გადმოწერა დაწყებულია</string>
    <string name="watch">ყურება</string>
    <string name="unable_search">ძებნისთვის საჭიროა ინტერნეტთან წვდომა</string>

    <!-- Related -->
    <string name="related_movies">მსგავსი ფილმები</string>
    <string name="related_series">მსგავსი სერიალები</string>

    <!-- Offline mode -->
    <string name="offline_remove">წაშლა</string>
    <string name="offline_remove_confirm">ნამდვილად გსურთ წაშლა?</string>
    <string name="offline_download">გადმოწერა</string>

    <!-- About -->
    <string name="about_developer">Hexlay</string>
    <string name="about_resources">Made possible with ↓</string>
    <string name="about_resources_tv">Made possible with →</string>

    <!-- Fragment: Watch -->
    <string name="full_comments">კომენტარები</string>
    <string name="full_chlang">ენის შეცვლა</string>
    <string name="full_chquality">ხარისხის შეცვლა</string>
    <string name="full_chsubtitles">სუბტიტრების შეცვლა</string>
    <string name="full_cast">მონაწილე მსახიობები</string>
    <string name="full_qual_low">დაბალი</string>
    <string name="full_qual_hd">მაღალი</string>
    <string name="full_cats_not_found">კატეგორიები ვერ მოიძებნა</string>
    <string name="full_error_movie">ფილმის ჩვენება შეუძლებელია</string>
    <string name="full_error_show">სერიალის ჩვენება შეუძლებელია</string>
    <string name="full_error_button">დახურვა</string>

    <!-- Languages -->
    <string name="full_geo">ქართული</string>
    <string name="full_eng">ინგლისური</string>
    <string name="full_rus">რუსული</string>
    <string name="full_jpn">იაპონური</string>
    <string name="full_ger">გერმანული</string>
    <string name="full_tur">თურქული</string>
    <string name="full_spa">ესპანური</string>
    <string name="full_ara">არაბული</string>

    <!-- News -->
    <string name="news_year">გამოშვების წელი: %s</string>
    <string name="news_duration">ხანგრძლივობა: %s</string>
    <string name="news_imdb">IMDB: %s</string>
    <string name="news_langs">ენები: %s</string>
    <string name="news_watch">ნახვები: %s</string>

    <!-- Filter -->
    <string name="filter_change_year">აირჩიეთ წელი</string>
    <string name="filter_change_category">აირჩიეთ კატეგორია</string>
    <string name="filter_change_country">აირჩიეთ ქვეყანა</string>
    <string name="filter_change_lang">აირჩიეთ ენა</string>
    <string name="filter_change_episode">აირჩიეთ ეპიზოდი</string>
    <string name="filter_change_sort">სორტირება</string>

    <!-- Fragment: Main -->
    <string name="fragment_main_top_movies">ტოპ ფილმები</string>
    <string name="fragment_main_geo_movies">ქართულად გახმოვანებული ფილმები</string>
    <string name="fragment_main_top_series">ტოპ სერიალები</string>
    <string name="fragment_main_geo_series">ქართულად გახმოვანებული სერიალები</string>
    <string name="fragment_main_premieres">პრემიერა</string>

    <!-- Menus -->
    <string name="menu_info">ინფორმაცია</string>
    <string name="menu_series">სერიალები</string>
    <string name="menu_movies">ფილმები</string>
    <string name="menu_favorites">ფავორიტები</string>
    <string name="menu_downloads">გადმოწერები</string>
    <string name="menu_main">მთავარი</string>
    <string name="menu_cast">მსახიობები</string>
    <string name="menu_sort">ფილტრი</string>

    <!-- Settings -->
    <string name="settings_title">პარამეტრები</string>
    <string name="settings_main">მთავარი</string>
    <string name="settings_player">ფლეიერი</string>
    <string name="settings_main_seek_title">გადახვევის დრო</string>
    <string name="settings_main_qual_title">ხარისხი</string>
    <string name="settings_main_lang_title">ენა</string>
    <string name="settings_main_seek_seconds">%s წამი</string>
    <string name="settings_main_seek_5">5 წამი</string>
    <string name="settings_main_seek_10">10 წამი</string>
    <string name="settings_main_seek_15">15 წამი</string>
    <string name="settings_main_seek_20">20 წამი</string>
    <string name="settings_main_downl_noti_title">გადმოწერის შეტყობინება</string>
    <string name="settings_main_maxbr_title">სიკაშკაშე</string>
    <string name="settings_main_dark_mode">თემის არჩევა</string>
    <string name="settings_main_maxbr_sum">მაქსიმალური სიკაშკაშე ყურების დროს</string>
    <string name="settings_main_language">აპლიკაციის ენა</string>
    <string name="settings_main_subtitles_title">სუბტიტრები</string>
    <string name="settings_main_subtitles_sum">სუბტიტრების ჩვენება არჩეულ ენაზე როცა შესაძლებელია</string>
    <string name="settings_light">ღია</string>
    <string name="settings_dark">მუქი</string>
    <string name="settings_auto">სისტემის მიხედვით</string>
    <string name="settings_about">აპლიკაციის შესახებ</string>

    <!-- Categories -->
    <string name="cat_265">ანიმაციური</string>
    <string name="cat_253">ბიოგრაფიული</string>
    <string name="cat_259">დეტექტივი</string>
    <string name="cat_252">დოკუმენტური</string>
    <string name="cat_249">დრამა</string>
    <string name="cat_269">ეროტიკული</string>
    <string name="cat_267">ვესტერნი</string>
    <string name="cat_264">ისტორიული</string>
    <string name="cat_258">კომედია</string>
    <string name="cat_260">მელოდრამა</string>
    <string name="cat_268">მიუზიკლი</string>
    <string name="cat_256">მისტიკა</string>
    <string name="cat_273">მოკლემეტრაჟიანი</string>
    <string name="cat_262">მუსიკალური</string>
    <string name="cat_248">მძაფრ-სიუჟეტიანი</string>
    <string name="cat_266">სათავგადასავლო</string>
    <string name="cat_257">ფანტასტიკა</string>
    <string name="cat_251">საომარი</string>
    <string name="cat_263">საოჯახო</string>
    <string name="cat_255">საშინელებათა ფილმი</string>
    <string name="cat_254">სერიალი</string>
    <string name="cat_275">სპორტული</string>
    <string name="cat_250">თრილერი</string>
    <string name="cat_261">ზღაპრული (ფენტეზი)</string>
    <string name="cat_316">კონცერტი</string>
    <string name="cat_312">Stand Up</string>
    <string name="cat_317">ავტო</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_movie">MovieActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

</resources>