<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_main">

        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_pref_brightness"
            android:key="brightness"
            android:summary="@string/settings_main_maxbr_sum"
            android:title="@string/settings_main_maxbr_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_download"
            android:key="download_notification"
            android:title="@string/settings_main_downl_noti_title" />

        <hexlay.movyeah.layouts.CustomListPreferenceLayout
            android:defaultValue="1"
            android:entries="@array/darkmode"
            android:entryValues="@array/darkmode_value"
            android:icon="@drawable/ic_pref_darkmode"
            android:key="darknet"
            android:title="@string/settings_main_dark_mode" />

        <Preference
            android:icon="@drawable/ic_pref_info"
            android:key="about_pref"
            android:title="@string/settings_about" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_player">

        <hexlay.movyeah.layouts.CustomListPreferenceLayout
            android:defaultValue="MEDIUM"
            android:entries="@array/quality"
            android:entryValues="@array/quality_value"
            android:icon="@drawable/ic_pref_quality"
            android:key="qual_value"
            android:title="@string/settings_main_qual_title" />

        <hexlay.movyeah.layouts.CustomListPreferenceLayout
            android:defaultValue="GEO"
            android:entries="@array/language"
            android:entryValues="@array/language_value"
            android:icon="@drawable/ic_pref_language"
            android:key="lang_value"
            android:title="@string/settings_main_lang_title" />

    </PreferenceCategory>

</PreferenceScreen>
