<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sort_holder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/filter_rounded"
    android:elevation="0dp"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/filter_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        app:navigationIcon="@drawable/ic_sort"
        app:title="@string/menu_sort" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/start_year"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:maxLines="1"
                android:text="@string/filter_change_start_year" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/end_year"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:maxLines="1"
                android:text="@string/filter_change_end_year" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sort_changer"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:maxLines="1"
                android:text="@string/filter_change_sort" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/language_changer"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:maxLines="1"
                android:text="@string/filter_change_lang" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/country_changer"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:maxLines="1"
                android:text="@string/filter_change_country" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/category_changer"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:maxLines="1"
                android:text="@string/filter_change_category" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>