<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_gravity="bottom"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center_vertical"
                android:text="@string/fragment_main_top_movies"
                android:textSize="17sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/top_movies_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_gravity="bottom"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center_vertical"
                android:text="@string/fragment_main_geo_movies"
                android:textSize="17sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/geo_movies_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_gravity="bottom"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center_vertical"
                android:text="@string/fragment_main_top_series"
                android:textSize="17sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/top_series_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_gravity="bottom"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center_vertical"
                android:text="@string/fragment_main_geo_series"
                android:textSize="17sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/geo_series_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_gravity="bottom"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center_vertical"
                android:text="@string/fragment_main_premieres"
                android:textSize="17sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/premiere_movies_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
